# cloneugc

./: .dockerignore  .gitignore  .rubocop.yml  Dockerfile  Gemfile  Makefile  basecamp.html  docker-compose.yaml  main.tf  manage.py  package.json  pyproject.toml
.github/workflows/: build-images.yaml  migrate-db.yaml
accounts/: apps.py  models.py  signals.py
accounts/migrations/: 0001_initial.py  0002_alter_account_credits.py  0003_alter_account_user.py  (+1 more)
api/: forms.py  models.py  tasks.py  urls.py  views.py
booth/: admin.py  cv.py  forms.py  models.py  tasks.py  urls.py  views.py
cloneugc/: .dockerignore  .gitignore  __init__.py  apps.py  asgi.py  celery.py  models.py  package.json  schema.py  settings.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  routes.rb  settings.py  storage.yml  urls.py
db/: schema.rb
deploy/: Dockerfile  ecs-task-definition.json  migrate-task-definition.json  migrate-task-nc.json
home/: admin.py  models.py
infra/: .terraform.lock.hcl  main.tf
inframedevice/: apps.py  cv.py  forms.py  views.py
lib/: llm.rb  secret_manager.rb  video.rb
notebooks/: aruco-overlay.ipynb  aruco-phone.ipynb  aruco_screen_tracks.json  overlay-replacement.ipynb  qr-generation.ipynb  repaint.ipynb
site/: .gitignore  .prettierrc  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
static/: app.css
studio/: ai.py  forms.py  models.py  tasks.py  urls.py  views.py
templates/: base.html  home.html
terraform/: main.tf
(+241 files in other folders)
