[project]
name = "cloneugc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.24",
    "celery[redis]>=5.5.2",
    "django>=5.2.1",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "whitenoise[brotli]>=6.9.0",
]
