[project]
name = "cloneugc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.24",
    "celery[redis]>=5.5.2",
    "django>=5.2.1",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "opencv-python>=4.11.0.86",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "whitenoise[brotli]>=6.9.0",
]
